# finmcp

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/design/Finmcp-files/: 0_README_INDEX.md  1_PROJECT_OVERVIEW.md  2_MCP_TOOLKIT_SPEC.md  3_TECH_ARCHITECTURE.md  4_MVP_SCOPE.md  5_CLAUDE_CODE_HANDOFF.md
shared/: README.md  pyproject.toml
shared/finmcp_common/: __init__.py  date_utils.py  errors.py  logging.py  responses.py  stock_code.py
shared/tests/: test_date_utils.py  test_errors.py  test_responses.py  test_stock_code.py
