[project]
name = "finmcp-common"
version = "0.1.0"
description = "Shared utilities for FinMCP servers"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["finmcp_common"]
